@@ -4,7 +4,9 @@
 
  Changes between 0.9.6g and 0.9.6h  [xx XXX xxxx]
 
-  *)
+  *) Fix typo in OBJ_txt2obj which incorrectly passed the content
+     length, instead of the encoding length to d2i_ASN1_OBJECT.
+     [Steve Henson]
 
  Changes between 0.9.6f and 0.9.6g  [9 Aug 2002]
 
